@@ -56,6 +56,11 @@
  *  - map_no_quest.template: when the map is linked to no quest.
  *  - map_with_quests.template: the map is linked to at least one quest.
  *   - map_one_quest.template: one quest link.
+ *  - map_no_monster: used when no monster on map.
+ *  - map_monster_before: applied before the monster list.
+ *  - map_monster_one: one monster on the map.
+ *  - map_monster_between: added after each monster except the last.
+ *  - map_monster_after: added after the last monster in the list.
  * - region.template: region page template.
  *  - region_letter: template for one letter
  *   - region_map.template: one map in a region
@@ -113,6 +118,16 @@
  *    - PATH: path to the quest page from the index.
  *    - TEXT: text associated to the map about the quest.
  * - map_no_quest: not processed.
+ * - map_no_monster:
+ *  - map's tags
+ * - map_monster_before:
+ *  - map's tags
+ * - map_monster_one:
+ *  - NAME: monster's name.
+ * - map_monster_between:
+ *  - map's tags
+ * - map_monster_after:
+ *  - map's tags
  * - region:
  *  - MAPCOUNT: count of maps in region.
  *  - LETTERS: text generated by region_letter processing.
@@ -205,6 +220,14 @@
 gdImagePtr* gdfaces;
 extern int nrofpixmaps; /* Found in common/image.c */
 
+/** Collection of races. */
+typedef struct struct_race_list {
+    struct struct_race** races; /**< Races on the list. */
+    int count;                  /**< Number of races. */
+    int allocated;              /**< Allocated space. */
+} struct_race_list;
+
+
 /** Utility structure to group map-quest link structure. */
 typedef struct {
     struct struct_map_in_quest** list;
@@ -233,6 +256,8 @@ typedef struct struct_map_info {
 
     struct_map_list tiled_maps;
 
+    struct_race_list monsters;
+
     struct struct_map_info* tiled_group;
     int height, width;
     int tiled_x_from, tiled_y_from, processed;
@@ -258,6 +283,53 @@ struct_equipment** special_equipment = NULL;    /**< Special equipment list. */
 int equipment_count = 0;                        /**< Number of items in special_equipment. */
 int equipment_allocated = 0;                    /**< Allocated items in special_equipment. */
 
+
+/** One monster race in the maps. */
+typedef struct struct_race {
+    char* name;             /**< Monster's name. */
+    int count;              /**< Number found on map. */
+    struct_map_list origin; /**< Maps to find said monster. */
+} struct_race;
+
+struct_race_list races;     /**< Monsters found in maps. */
+
+/**
+ * Blanks a struct_race_list.
+ * @param list
+ * list to blank.
+ */
+void init_race_list(struct_race_list* list) {
+    list->races = NULL;
+    list->count = 0;
+    list->allocated = 0;
+}
+
+/**
+ * Appends a race to a race list.
+ *
+ * @param race
+ * race to add.
+ * @param list
+ * list to add to.
+ * @param check
+ * if 0, don't check if race is already on the list ; else don't make duplicated entries.
+ */
+void add_race_to_list(struct_race* race, struct_race_list* list, int check) {
+    if (check) {
+        int test;
+        for (test = 0; test < list->count; test++) {
+            if (list->races[test] == race)
+                return;
+        }
+    }
+
+    if (list->allocated == list->count) {
+        list->allocated += 50;
+        list->races = realloc(list->races, sizeof(struct_race*) * list->allocated);
+    }
+    list->races[list->count] = race;
+    list->count++;
+}
 
 /** Path to store generated files. Relative or absolute, shouldn't end with a / */
 char root[500];
@@ -288,6 +360,11 @@ char* map_with_exit_to_template;    /**< Map template: exits leading to this map
 char* map_exit_to_template;         /**< Map template: one exit leading to this map. */
 char* map_lore_template;            /**< Map template: lore. */
 char* map_no_lore_template;         /**< Map template: no lore. */
+char* map_no_monster_template;      /**< Map template: no monster. */
+char* map_monster_before_template;  /**< Map template: before the monster list. */
+char* map_monster_between_template; /**< Map template: between each monster. */
+char* map_monster_one_template;     /**< Map template: one monster. */
+char* map_monster_after_template;   /**< Map template: after the monster list. */
 
 char* index_template;           /**< Index page template. */
 char* index_letter;             /**< Index page template: one letter, including the maps it contains. */
@@ -553,6 +630,69 @@ static int sort_equipment(const void* a, const void* b) {
 
     if (c)
         return c;
+    return strcasecmp(l->name, r->name);
+}
+
+/**
+ * Returns the race for specified name.
+ *
+ * @param name
+ * monster's name.
+ * @return
+ * race structure.
+ */
+static struct_race* get_race(const char* name) {
+    int test;
+    struct_race* item;
+
+    for (test = 0; test < races.count; test++) {
+        if (strcmp(races.races[test]->name, name) == 0) {
+            races.races[test]->count++;
+            return races.races[test];
+        }
+    }
+
+    item = calloc(1, sizeof(struct_race));
+    item->name = strdup(name);
+    item->count = 1;
+    init_map_list(&item->origin);
+
+    add_race_to_list(item, &races, 0);
+
+    return item;
+}
+
+/**
+ * Adds a monster to the monster list.
+ *
+ * @param monster
+ * monster to add. Can be any part.
+ * @param map
+ * map to add the monster to.
+ */
+static void add_monster(object* monster, struct_map_info* map) {
+    struct_race* race;
+    int test;
+
+    if (monster->head && monster != monster->head)
+        return;
+
+    race = get_race(monster->name);
+    add_map(map, &race->origin);
+    add_race_to_list(race, &map->monsters, 1);
+}
+
+/**
+ * Sort 2 struct_race.
+ * @param a
+ * @param b
+ * items to compare.
+ * @return
+ * -1, 0 or 1.
+ */
+static int sort_race(const void* a, const void* b) {
+    const struct_race* l = *(const struct_race**)a;
+    const struct_race* r = *(const struct_race**)b;
     return strcasecmp(l->name, r->name);
 }
 
@@ -1266,6 +1406,7 @@ struct_map_info* create_map_info() {
     init_map_list(&add->exits_from);
     init_map_list(&add->tiled_maps);
     init_struct_map_in_quest_list(&add->quests);
+    init_race_list(&add->monsters);
     add->tiled_group = NULL;
 
     return add;
@@ -1761,6 +1902,9 @@ void process_map(struct_map_info* info)
 
                 check_slaying_inventory(info, item);
 
+                if (QUERY_FLAG(item, FLAG_MONSTER))
+                    add_monster(item, info);
+
                 if (item->invisible)
                     continue;
 
@@ -2217,6 +2361,7 @@ void write_map_page(struct_map_info* map) {
     char* maplore;
     char* tmp;
     char* quests, *quest;
+    char* monsters;
 
     char htmlpath[500];         /* Map file path. */
     char mappic[500];           /* Name of map's full size picture. */
@@ -2235,9 +2380,11 @@ void write_map_page(struct_map_info* map) {
     const char* quest_vals[] = { NULL, questpath, NULL, NULL };
     const char* q_vars[] = { "QUESTS", NULL };
     const char* q_vals[] = { NULL, NULL };
+    const char* m_vars[] = { "NAME", NULL };
+    const char* m_vals[] = { NULL, NULL };
 
-    const char* vars[] = { "NAME", "MAPPATH", "MAPNAME", "MAPPIC", "MAPSMALLPIC", "MAPEXITFROM", "INDEXPATH", "REGIONPATH", "REGIONNAME", "REGIONINDEXPATH", "WORLDMAPPATH", "MAPLORE", "MAPEXITTO", "MAPLEVEL", "QUESTS", NULL, NULL, NULL };
-    const char* values[] = { map->path, htmlpath, map->name, mappic, mapsmallpic, "", indexpath, regionpath, regionname, regionindexpath, worldmappath, "", "", maplevel, NULL, NULL, NULL, NULL };
+    const char* vars[] = { "NAME", "MAPPATH", "MAPNAME", "MAPPIC", "MAPSMALLPIC", "MAPEXITFROM", "INDEXPATH", "REGIONPATH", "REGIONNAME", "REGIONINDEXPATH", "WORLDMAPPATH", "MAPLORE", "MAPEXITTO", "MAPLEVEL", "QUESTS", "MONSTERS", NULL, NULL, NULL };
+    const char* values[] = { map->path, htmlpath, map->name, mappic, mapsmallpic, "", indexpath, regionpath, regionname, regionindexpath, worldmappath, "", "", maplevel, NULL, "", NULL, NULL, NULL };
     int vars_count = 0;
 
     while (vars[vars_count])
@@ -2353,6 +2500,24 @@ void write_map_page(struct_map_info* map) {
     else
         quests = strdup(map_no_quest_template);
     values[14] = quests;
+
+    if (map->monsters.count) {
+        int m;
+
+        qsort(map->monsters.races, map->monsters.count, sizeof(struct_race*), sort_race);
+
+        monsters = do_template(map_monster_before_template, vars, values);
+        for (m = 0; m < map->monsters.count; m++) {
+            m_vals[0] = map->monsters.races[m]->name;
+            monsters = cat_template(monsters, do_template(map_monster_one_template, m_vars, m_vals));
+            if (m != map->monsters.count - 1)
+                monsters = cat_template(monsters, do_template(map_monster_between_template, vars, values));
+        }
+        monsters = cat_template(monsters, do_template(map_monster_after_template, vars, values));
+    }
+    else
+        monsters = do_template(map_no_monster_template, vars, values);
+    values[15] = monsters;
 
     vars[vars_count] = NULL;
     out = fopen(htmlpath, "w+");
@@ -2494,6 +2659,37 @@ void fix_exits_to_tiled_maps() {
                 regions[region]->maps_list.count--;
                 max--;
                 add_map(group, &regions[region]->maps_list);
+            }
+        }
+    }
+}
+
+/**
+ * Makes all monsters point to tiled maps instead of map when appliable, and merge
+ * map monster to tiled map.
+ */
+void fix_tiled_map_monsters() {
+    int map, race, max;
+    struct_map_info* group;
+
+    for (race = 0; race < races.count; race++) {
+        max = races.races[race]->origin.count - 1;
+        for (map = max; map >= 0; map--) {
+            if (races.races[race]->origin.maps[map]->tiled_group) {
+                group = races.races[race]->origin.maps[map]->tiled_group;
+                if (map != max)
+                    races.races[race]->origin.maps[map] = races.races[race]->origin.maps[max];
+                races.races[race]->origin.count--;
+                max--;
+                add_map(group, &races.races[race]->origin);
+            }
+        }
+    }
+
+    for (map = 0; map < maps_list.count; map++) {
+        if (maps_list.maps[map]->tiled_group) {
+            for (race = 0; race < maps_list.maps[map]->monsters.count; race++) {
+                add_race_to_list(maps_list.maps[map]->monsters.races[race], &maps_list.maps[map]->tiled_group->monsters, 1);
             }
         }
     }
@@ -2796,6 +2992,41 @@ void write_equipment_index() {
             fprintf(out, "<li>%s</li>\n", special_equipment[item]->origin.maps[map]->path);
 
         fprintf(out, "</ul></td><td>%d</td><td>%d</td><td><pre>%s</pre></td></tr>\n", special_equipment[item]->power, special_equipment[item]->calc_power, special_equipment[item]->diff);
+    }
+    fprintf(out, "</body></html>\n");
+    fclose(out);
+
+    printf(" done.\n");
+}
+
+/**
+ * Writes the monster information page.
+ */
+static void write_race_index() {
+    int item, map;
+    FILE* out;
+    char name[500];
+
+    printf("Generating monster list...");
+    fflush(stdout);
+
+    qsort(races.races, races.count, sizeof(struct_race*), sort_race);
+
+    snprintf(name, sizeof(name), "%s/monsters.html", root);
+    out = fopen(name, "w+");
+
+    fprintf(out, "<html><head><title>Monster list</title></head></body><h1>Monsters found in maps</h1>\n");
+    fprintf(out, "<table border=\"1\"><tr><th>Name</th><th>Count</th><th>Map(s)</th></tr>\n");
+
+    for (item = 0; item < races.count; item++) {
+        fprintf(out, "<tr><td>%s</td><td>%d</td><td>Found on %d maps:<ul>", races.races[item]->name, races.races[item]->count, races.races[item]->origin.count);
+
+        qsort(races.races[item]->origin.maps, races.races[item]->origin.count, sizeof(struct_map_info*), sort_map_info);
+
+        for (map = 0; map < races.races[item]->origin.count; map++)
+            fprintf(out, "<li>%s</li>\n", races.races[item]->origin.maps[map]->path);
+
+        fprintf(out, "</ul></td></tr>\n");
     }
     fprintf(out, "</body></html>\n");
     fclose(out);
@@ -3168,6 +3399,7 @@ int main(int argc, char** argv)
 
     init_map_list(&maps_list);
     init_map_list(&tiled_map_list);
+    init_race_list(&races);
     pics_allocated = 0;
 
     do_parameters(argc, argv);
@@ -3206,6 +3438,11 @@ int main(int argc, char** argv)
     read_template("templates/map_exit_to.template", &map_exit_to_template);
     read_template("templates/map_lore.template", &map_lore_template);
     read_template("templates/map_no_lore.template", &map_no_lore_template);
+    read_template("templates/map_no_monster.template", &map_no_monster_template);
+    read_template("templates/map_monster_before.template", &map_monster_before_template);
+    read_template("templates/map_monster_between.template", &map_monster_between_template);
+    read_template("templates/map_monster_one.template", &map_monster_one_template);
+    read_template("templates/map_monster_after.template", &map_monster_after_template);
 
     read_template("templates/index.template", &index_template);
     read_template("templates/index_letter.template", &index_letter);
@@ -3300,6 +3537,7 @@ int main(int argc, char** argv)
     fix_exits_to_tiled_maps();
     fix_map_names();
     fix_tiled_map();
+    fix_tiled_map_monsters();
 
     write_all_maps();
     write_maps_index();
@@ -3318,6 +3556,7 @@ int main(int argc, char** argv)
     write_quests_page();
 
     write_equipment_index();
+    write_race_index();
 
     return 0;
 }
